--- a/index.html
+++ b/index.html
@@ -11,28 +11,45 @@
     margin:0; 
     padding:0;
   }
+  canvas {
+    text-align: center;
+  }
+  .center {
+    margin: auto;
+    padding: 10px;
+  }
+  .container{
+    margin: auto;
+    width: 70%;
+    padding: 10px;
+  }
 </style>
 
 <body>
-  <canvas id="glcanvas" width="600" height="600">
-    Browser Anda tidak mendukung HTML5 <code>&lt;canvas&gt;</code>.
-  </canvas>
-  <h3>
-    Bagas Y. S. | 05111740000074
-  </h3>
-  <br>
-  <h2>
-    Petunjuk
-  </h2>
-  <div>
-      <strong>
+  <div class="container">
+      <h3>
+          Bagas Y. S. | 05111740000074
+        </h3>
+        <br>
+        <h2>
+          Petunjuk
+        </h2>
         <div>
-          <span style="width: 50px; display: inline-block;">Mouse Drag</span>
-          <span>= Rotasi</span>
+            <stron>
+              <div>
+                <span>Mouse Drag</span>
+                <span> = Rotasi Kubus</span>
+              </div>
+            </strong>
         </div>
-      </strong>
+    <div class="center">
+    <canvas id="glcanvas" class="center" width="600" height="600">
+      Browser Anda tidak mendukung HTML5 <code>&lt;canvas&gt;</code>.
+    </canvas>
   </div>
-  
+    
+        
+</div>
   <script name="shader" data-src="vertex.glsl" data-type="vertex" data-version="v1"></script>
   <script name="shader" data-src="fragment.glsl" data-type="fragment" data-version="v1"></script>
   <script type="text/javascript" src="libs/signals.js"></script>
